2003-03-14  Reinhard Spisser  <reinhard@spisser.it>

	
	* common/pm/ProjectTask.class:
	Fix bug # 231: Assignee not registered

	* www/include/languages/Italian.tab
	Translations

	* www/include/html.php
	Added a parameter pos_100 to  html_build_select_box_from_arrays, 
	so that you can decide if you wish to have the 'none' 
	on the top (default) or at the bottom of the list
	
	* www/pm/browse_task.php:
	Fix bug # 216: Category: missing "None"
	
	* www/survey/admin/show_results_aggregate.php:
	Fix bug # 244: survey: pg_atoi_error
	
2003-03-12  Roland Mas  <lolando@debian.org>

	* db/20030312.sql: New file: the start_date of a task is now
	constrained to be <= to its end_date (instead of < previously).

2003-03-10  Reinhard Spisser  <reinhard@spisser.it>


	* www/include/languages/SimplifiedChinese.tab:
	Committing Simon Lei's translations to Chines
	
	* www/include/languages/Italian.tab
	translations
	

2003-03-08  Ryan T. Sammartino  <ryants@shaw.ca>

	* www/people/index.php: valid XHTML 1.0 Transitional.

	* www/people/people_utils.php(people_header): remove
	unneeded </strong>.
	(people_show_job_inventory): valid XHTML.

	* www/include/languages/Base.tab(people:about_blurb): XHTML-ise.

2003-03-07  Reinhard Spisser <reinhard@spisser.it>

	* www/include/languages/Italian.tab:
	more translations

	* www/include/languages/SimplifiedChinese.tab:
	applied patch #242

	* docs/xdocs/*:
	documentation improvements

	* install
	SF->GForge

2003-03-02  Ryan T. Sammartino  <ryants@shaw.ca>

	Bug #218
	* www/snippet/submit.php: comment out links to 'Suggest New
	Language' and 'Suggest new category', marked with a FIXME
	now, until we can figure out where they really should go.

	* www/new/index.php: valid XHTML 1.0 Transitional.

	* www/include/languages/Base.tab(newe:notes_changes): use
	&amp; instead of just &.

2003-03-01  Ryan T. Sammartino  <ryants@shaw.ca>

	Bug #229
	* www/include/html.php(html_abs_image): new function.